--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,33 @@
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="A component to preview an article with active states."
+    />
+    <meta name="robots" content="all" />
+    <meta name="author" content="Tsukimi" />
+    <meta name="og:title" content="Article Preview Component" />
+    <meta
+      name="og:description"
+      content="A component to preview an article with active states."
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <title>Article Preview Component</title>
+  </head>
+  <body>
+    <h1>Astro</h1>
+    <h2 class="m-3 p-3 px-2 pt-4">Hello</h2>
+    Bruh
+  </body>
 </html>
