--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-
+import ArticlePreview from "../components/ArticlePreview.astro";
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width" />
     <meta
       name="description"
@@ -28,8 +28,10 @@
     <title>Article Preview Component</title>
   </head>
   <body>
-    <h1>Astro</h1>
-    <h2 class="m-3 p-3 px-2 pt-4">Hello</h2>
-    Bruh
+    <main
+      class="bg-light-gray-blue font-manrope flex h-screen w-full items-center justify-center p-6"
+    >
+      <ArticlePreview />
+    </main>
   </body>
 </html>
