--- a/src/components/ArticleContent.astro
+++ b/src/components/ArticleContent.astro
@@ -2,8 +2,8 @@
 import AuthorDisplay from "./AuthorDisplay.vue";
 ---
 
-<div class="flex flex-col justify-between gap-8">
-  <div class="flex flex-col gap-4 p-8 md:p-10">
+<div class="flex h-full flex-col justify-between">
+  <div class="flex flex-col gap-4 p-8 md:pb-0">
     <p class="text-dark-gray-blue font-bold tracking-wide md:text-xl">
       Shift the overall look and feel by adding these wonderful touches to
       furniture in your home
