redo mobile share view

--- a/src/components/ArticlePreview.astro
+++ b/src/components/ArticlePreview.astro
@@ -6,7 +6,7 @@ import drawers from "./assets/drawers.jpg";
 ---
 
 <div
-  class="shadow-gray-blue flex min-h-[32rem] w-full flex-col rounded-xl bg-white shadow-lg md:h-[17.5rem] md:min-h-0 md:w-[45.625rem] md:flex-row"
+  class="shadow-gray-blue flex w-full max-w-[21rem] flex-col rounded-xl bg-white shadow-lg md:h-[17.5rem] md:w-[45.625rem] md:max-w-full md:flex-row"
 >
   <Image
     src={drawers}
