--- a/src/components/ArticlePreview.astro
+++ b/src/components/ArticlePreview.astro
@@ -6,13 +6,13 @@ import drawers from "./assets/drawers.jpg";
 ---
 
 <div
-  class="shadow-gray-blue flex w-full max-w-[21rem] flex-col rounded-xl bg-white shadow-lg md:h-[17.5rem] md:w-[45.625rem] md:max-w-full md:flex-row"
+  class="flex w-full max-w-[21rem] flex-col rounded-xl bg-white shadow-lg shadow-gray-blue lg:h-[17.5rem] lg:w-[45.625rem] lg:max-w-full lg:flex-row"
 >
   <Image
     src={drawers}
     height={200}
     alt="Drawers"
-    class="h-full w-full rounded-none rounded-t-xl object-cover md:rounded-none md:rounded-l-xl"
+    class="h-full w-full rounded-none rounded-t-xl object-cover lg:rounded-none lg:rounded-l-xl"
   />
   <ArticleContent />
 </div>
