--- a/src/components/ArticleContent.astro
+++ b/src/components/ArticleContent.astro
@@ -3,12 +3,12 @@ import AuthorDisplay from "./AuthorDisplay.vue";
 ---
 
 <div class="flex h-full flex-col justify-between">
-  <div class="flex flex-col gap-4 p-8 md:pb-0">
-    <p class="text-dark-gray-blue font-bold tracking-wide md:text-xl">
+  <div class="flex flex-col gap-4 p-8 lg:pb-0">
+    <p class="font-bold tracking-wide text-dark-gray-blue lg:text-xl">
       Shift the overall look and feel by adding these wonderful touches to
       furniture in your home
     </p>
-    <p class="text-desat-dark-blue text-sm font-medium tracking-wide">
+    <p class="text-sm font-medium tracking-wide text-desat-dark-blue">
       Ever been in a room and felt like something was missing? Perhaps it felt
       slightly bare and uninviting. I've got some simple tips to help you make
       any room feel complete.
