--- a/src/components/ArticleContent.astro
+++ b/src/components/ArticleContent.astro
@@ -2,8 +2,8 @@
 import AuthorDisplay from "./AuthorDisplay.vue";
 ---
 
-<div class="flex h-full flex-col justify-between">
-  <div class="flex flex-col gap-4 p-8 lg:pb-0">
+<div class="flex h-full flex-col justify-around gap-4">
+  <div class="flex flex-col gap-4 p-6 lg:pb-0">
     <p class="font-bold tracking-wide text-dark-gray-blue lg:text-xl">
       Shift the overall look and feel by adding these wonderful touches to
       furniture in your home
